# Pyrphoros

./: .gitignore  Readme.md  pyproject.toml  setup.py
pyrphoros/: graph.py
tests/: test_graph.py
